--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -35,21 +35,21 @@ pre {
     margin: 10px;
 }
 .navbar-default a {
-    color: #ffffff !important;
+    color: #000000  !important;
     font-size: 18px !important;
     text-decoration: none;
 }
 .grails-icon img {
-    width: 40px;
+    width: 80px;
 
 }
 .navbar-default, .navbar-static-top {
-    background-color: #4D8618;
+    background-color: rgba(34, 35, 255, 0);
     border: 0px;
 }
 a.navbar-brand {
-    color: white !important;
-    font-size: 19px !important;
+    color: #000000 !important;
+    font-size: 30px !important;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
     background-color: transparent;
