--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -77,6 +77,7 @@ img {
     border-bottom: 1px solid #CCCCCC;
     margin: 0.8em 1em 0.3em;
     padding: 0 0.25em;
+    font-size: 1.75em;
 }
 
 .scaffold-list h1 {
@@ -225,6 +226,7 @@ input, select, textarea {
     border: 1px solid #cccccc;
     font-size: 1em;
     padding: 0.2em 0.4em;
+    box-shadow: 0 0 0.1em #cccccc;
 }
 
 select {
